tests/ui/openapi_type_tuple_struct.stderr
error: #[derive(OpenapiType)] does not support unnamed fields
 --> $DIR/openapi_type_tuple_struct.rs:4:11
  |
4 | struct Foo(String);
  |           ^^^^^^^^
